--- a/templates/nginx_site.conf
+++ b/templates/nginx_site.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  localhost;
+    server_name  flitsapp.local;
     
     access_log  {{ webapps_dir }}/{{ app_name }}/log/nginx-access.log;
     error_log {{ webapps_dir }}/{{ app_name }}/log/nginx-error.log;
@@ -11,7 +11,7 @@ server {
     }
     
     location /static {
-        alias {{ webapps_dir }}/{{ app_name }}/{{ app_name }}/static;
+        alias {{ webapps_dir }}/{{ app_name }}/src/static;
         expires 1y;
         add_header Cache-Control "public";
     }
