--- a/templates/supervisor_app.conf
+++ b/templates/supervisor_app.conf
@@ -3,8 +3,8 @@ command=/usr/local/bin/uwsgi
   --socket /tmp/{{ app_name }}.sock
   --logto {{ webapps_dir }}/{{ app_name }}/log/application.log
   --home {{ webapps_dir }}/{{ app_name }}/venv
-  --pythonpath {{ webapps_dir }}/{{ app_name }}
-  --wsgi-file {{ webapps_dir }}/{{ app_name }}/{{ wsgi_file }}
+  --pythonpath {{ webapps_dir }}/{{ app_name }}/src
+  --wsgi-file {{ webapps_dir }}/{{ app_name }}/src/{{ wsgi_file }}
   --callable {{ wsgi_callable }}
   --max-requests 1000
   --master
