--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -1,27 +1,15 @@
 ---
+trusted_networks:
+  - 127.0.0.1
+  - 10.0.0.0/8
+  - 172.16.0.0/12
+  - 192.168.0.0/16
+  - "{{ ansible_env.SSH_CONNECTION.split()[0] }}"
 
-nginx_max_clients: 512
+nginx_sites: []
 
-nginx_http_params:
-  sendfile: "on"
-  tcp_nopush: "on"
-  tcp_nodelay: "on"
-  keepalive_timeout: "65"
-  access_log: "/var/log/nginx/access.log"
-  error_log: "/var/log/nginx/error.log"
+nginx_proxies: []
 
-nginx_sites:
- - server:
-    file_name: foo
-    listen: 8080
-    server_name: localhost
-    root: "/tmp/site1"
-    location1: {name: /, try_files: "$uri $uri/ /index.html"}
-    location2: {name: /images/, try_files: "$uri $uri/ /index.html"}
- - server:
-    file_name: bar
-    listen: 9090
-    server_name: ansible
-    root: "/tmp/site2"
-    location1: {name: /, try_files: "$uri $uri/ /index.html"}
-    location2: {name: /images/, try_files: "$uri $uri/ /index.html"}
+nginx_cert_dir: /var/ssl
+local_cert_dir: certificates
+
