--- a/roles/nginx/handlers/main.yml
+++ b/roles/nginx/handlers/main.yml
@@ -1,6 +1,12 @@
 ---
 - name: restart nginx
-  service: name=nginx state=restarted 
+  service:
+    name=nginx
+    state=restarted
+  sudo: yes
 
 - name: reload nginx
-  service: name=nginx state=reloaded
+  service:
+    name=nginx
+    state=reloaded
+  sudo: yes
