--- a/templates/nginx_site.conf
+++ b/templates/nginx_site.conf
@@ -8,6 +8,10 @@ server {
     location / {
         include uwsgi_params;
         uwsgi_pass unix:/tmp/{{ app_name }}.sock;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Base-Uri "${scheme}://$host/";
     }
     
     location /static {
