--- a/roles/ubuntu/files/apt-periodic.conf
+++ b/roles/ubuntu/files/apt-periodic.conf
@@ -1,6 +1,5 @@
 // DO NOT EDIT
 // This file is managed by Ansible
-// Refer to https://github.com/publysher/ansible-debian_stable for more information
 
 // Enable the update/upgrade script (0=disable)
 APT::Periodic::Enable "1";
@@ -13,3 +12,6 @@ APT::Periodic::Update-Package-Lists "1";
 // Requires the package "unattended-upgrades" and will write
 // a log in /var/log/unattended-upgrades
 APT::Periodic::Unattended-Upgrade "1";
+
+APT::Periodic::Download-Upgradeable-Packages "1";
+APT::Periodic::AutocleanInterval "7";
