--- a/templates/nginx_site.conf
+++ b/templates/nginx_site.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  flitsapp.local;
+    server_name  someapp.local;
     
     access_log  {{ webapps_dir }}/{{ app_name }}/log/nginx-access.log;
     error_log {{ webapps_dir }}/{{ app_name }}/log/nginx-error.log;
