--- a/pythonbox.yml
+++ b/pythonbox.yml
@@ -3,7 +3,9 @@
 - hosts: all
   sudo: yes
   roles:
-    - debian
+    - ubuntu
+    - secure-vps
+    - monitored
 
 - hosts: database
   sudo: yes
