--- a/roles/postgres/tasks/install.yml
+++ b/roles/postgres/tasks/install.yml
@@ -1,17 +1,17 @@
 ---
 
-- name: install postgresql packages debian/ubuntu
-  apt: pkg={{ item }} state=latest
+- name: install postgresql packages ubuntu
+  apt: name={{ item }} state=latest
   with_items:
     - postgresql
     - postgresql-contrib
     - postgresql-client
-    - libpq-dev
     - python-psycopg2
+    - libpq-dev
 
 - name: Allow network access
   lineinfile:
-    dest=/etc/postgresql/9.1/main/postgresql.conf
+    dest=/etc/postgresql/9.3/main/postgresql.conf
     regexp=listen_addresses
     line="listen_addresses = '*'"
   notify:
