--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: install python-related packages debian/ubuntu
-  apt: pkg={{ item }} state=latest
+  apt: name={{ item }} state=latest
   with_items:
     - python
     - python-dev
